z-index issue on mobile fixed

--- a/assets/intro.css
+++ b/assets/intro.css
@@ -2,6 +2,7 @@ header {
 	background-position: center center;
 	background-repeat: no repeat;
 	background-size: cover;
+	z-index: 2;
 }
 .container {
 	display: flex;
